added loader gif. Updated some style and logic

--- a/example/static/index.html
+++ b/example/static/index.html
@@ -19,6 +19,7 @@
     </form>
     <div class="error error--hidden" id="error"></div>
     <ul class="noteDispenser noteDispenser--hidden" id="note-dispenser"></ul>
+    <div class="loader loader--hidden" id="loader" />
     <script src="main.js"></script>
 </body>
 
